[package]
name = "prysm"
version = "0.0.0"
edition = "2018"

[raze]
workspace_path = "//cargo"
genmode = "Remote"
output_buildfile_suffix = "BUILD.bazel"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
bls-aggregates = { git = "https://github.com/sigp/signature-schemes", tag = "0.6.1" }

