[package]
name = "prysm"
version = "0.0.0"
edition = "2018"

[raze]
workspace_path = "//cargo"
genmode = "Remote"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
bls-aggregates = { git = "https://github.com/sigp/signature-schemes", tag = "0.6.1" }

# Fixes (?)
[raze.crates.crunchy.'0.1.6']
gen_buildrs = true

[raze.crates.proc-macro2.'0.4.30']
additional_flags = [
    "--cfg=use_proc_macro",
]
