package(
    default_testonly = 1,
    default_visibility = ["//fuzz:__subpackages__"],
)

cc_library(
    name = "runnable",
    srcs = ["runnable.cc"],
    hdrs = ["runnable.h"],
)

cc_library(
    name = "python",
    srcs = [
        "python.cc",
    ],
    hdrs = [
        "python.h",
        "python_coverage.h",
    ],
    linkopts = [
        "-lpython3.8",
    ],
    deps = [
        ":runnable",
        "//third_party/python_runtime:headers",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_library(
    name = "differential",
    srcs = ["differential.cc"],
    hdrs = ["differential.h"],
    deps = [":runnable"],
)
