package(
    default_testonly = 1,
    default_visibility = ["//fuzz:__subpackages__"],
)

cc_library(
    name = "runnable",
    srcs = ["runnable.cc"],
    hdrs = ["runnable.h"],
)

cc_library(
    name = "python",
    srcs = [
        "python.cc",
        "python_coverage.h",
    ],
    hdrs = [
        "python.h",
    ],
    linkopts = [
        "-lpython3.8",
    ],
    deps = [
        ":runnable",
        "//third_party/python_runtime:headers",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_library(
    name = "differential",
    srcs = ["differential.cc"],
    hdrs = ["differential.h"],
    deps = [":runnable"],
)

cc_library(
    name = "go",
    srcs = [
        "go.cc",
    ],
    hdrs = [
        "cgo.h",
        "go.h",
    ],
    deps = [":runnable"],
)

cc_test(
    name = "go_test",
    srcs = [
        "go_test.cc",
    ],
    deps = [
        ":go",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
