package(
    default_testonly = 1,
    default_visibility = ["//fuzz:__subpackages__"],
)

cc_library(
    name = "runnable",
    srcs = ["runnable.cc"],
    hdrs = ["runnable.h"],
)

# Old target, probably will delete this.
# TODO: Resolve this before merge to master.
cc_library(
    name = "python_old",
    srcs = [
        "python_coverage.h",
        "python_old.cc",
    ],
    hdrs = [
        "python_old.h",
    ],
    linkopts = [
        "-lpython3.8",
    ],
    deps = [
        ":runnable",
        "//third_party/python_runtime:headers",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_library(
    name = "python",
    srcs = [
        "python.cc",
        "python_coverage.h",
    ],
    hdrs = [
        "python.h",
    ],
    linkopts = [
        "-lpython3.8",
    ],
    deps = [
        "//third_party/python_runtime:headers",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_test(
    name = "python_test",
    srcs = ["python_test.cc"],
    data = [
        "python_example.py",
    ],
    deps = [
        ":python",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "differential",
    srcs = ["differential.cc"],
    hdrs = ["differential.h"],
    deps = [":runnable"],
)

cc_test(
    name = "differential_test",
    srcs = ["differential_test.cc"],
    deps = [
        ":differential",
        ":runnable",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "convert",
    srcs = ["convert.cc"],
    hdrs = ["convert.h"],
)

cc_test(
    name = "convert_test",
    srcs = ["convert_test.cc"],
    deps = [
        ":convert",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "go",
    srcs = [
        "go.cc",
    ],
    hdrs = [
        "cgo.h",
        "go.h",
    ],
    deps = [":runnable"],
)

cc_test(
    name = "go_test",
    srcs = [
        "go_test.cc",
    ],
    deps = [
        ":go",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
