load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "rust_bls_staticlib",
    srcs = [
        "bls.rs",
    ],
    crate_type = "staticlib",
)

cc_import(
    name = "rust_bls_archive",
    static_library = ":rust_bls_staticlib",
    alwayslink = True,
)

go_library(
    name = "go_default_library",
    srcs = [
        "bls.go",
        "bls.s",
    ],
    cdeps = [
        ":rust_bls_archive",
    ],
    cgo = True,
    importpath = "github.com/prysmaticlabs/prysm/shared/rustbls",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "rustbls",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
