load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "rust_bls_staticlib",
    srcs = [
        "lib.rs",
    ],
    crate_type = "staticlib",
    deps = [
        #"//cargo:bls_aggregates",
    ],
)

cc_import(
    name = "rust_bls_archive",
    static_library = ":rust_bls_staticlib",
    alwayslink = 1,
)

go_library(
    name = "go_default_library",
    srcs = [
        "bls.go",
        "bls.s",
    ],
    cdeps = [
        ":rust_bls_archive",
    ],
    cgo = True,
    clinkopts = ["-ldl"],
    importpath = "github.com/prysmaticlabs/prysm/shared/rustbls",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "rustbls",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["bls_test.go"],
    embed = [":go_default_library"],
)
