load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prysmaticlabs/prysm/tools/load-tester",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bojand_ghz//runner:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "load-tester",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
