load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "log.go",
        "service.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/sync/initial-sync",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/db:go_default_library",
        "//beacon-chain/p2p:go_default_library",
        "//shared:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
